Security: Remove FTP credentials from version control
- Add deploy.js to .gitignore to prevent credential exposure
- Create deploy.template.js with placeholder credentials
- Remove deploy.js from git tracking (keeps local file)

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,5 @@ temp/
 .firebaserc
 firebase-debug.log
 
-# Deployment credentials (keep deploy.js since it has placeholders)
-# deploy.js (uncomment if you add real credentials)
+# Deployment credentials - NEVER commit real FTP credentials!
+deploy.js
