--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "basic-ftp": "^5.0.5",
+    "sass": "^1.90.0",
     "terser": "^5.43.1",
     "vite": "^5.0.0"
   }
