feat: Fix squadron refit system and improve refit UI
Major fixes and improvements to the refit system:

Squadron Refit Fixes:
- Fix Bulky Design and other squadron refits not applying stat changes to UI
- Squadron refit modal now uses correct handler (addRefitToGroup)
- Fixed squadron refit removal to properly restore original stats
- Synchronized squadron refit eligibility and constraint validation with capital ships

Refit UI Improvements:
- Remove redundant weapon option pills from refit modals
- Extended Hull refit now correctly shows as eligible when at least one option is valid
- Heavy Armour constraint validation now works properly
- Improved refit option handling for both capital ships and squadrons

Canonical Refit System:
- Complete canonical refit format implementation
- Robust stat delta application and validation
- Proper constraint checking (armourMax, speedMin, etc.)
- Weapon modification support via weaponChanges
- Full backward compatibility with legacy refit format

Technical Changes:
- Added comprehensive refit utilities in src/utils/refits/
- Improved state management for squadron refits
- Enhanced debug logging and error handling
- Better separation of concerns between refit logic and UI

--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "npm run build && node deploy.js",
-    "deploy:netlify": "npm run build && echo 'Drag dist/ folder to netlify.com'"
+    "deploy:netlify": "npm run build && echo 'Drag dist/ folder to netlify.com'",
+    "test": "playwright test",
+    "test:debug": "playwright test --debug",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:critical": "playwright test tests/debug-refit-issues.spec.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -20,6 +25,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@vitejs/plugin-react": "^4.2.0",
     "basic-ftp": "^5.0.5",
     "sass": "^1.90.0",
