feat: Major updates for v0.9.0 release
- 🐛 Fix Firebase Hosting MIME type errors by removing base path
- 📧 Add EmailJS bug report system with enhanced form
  - App location dropdown with icons
  - Faction selection (excluding Universal)
  - Smart email field (hidden for authenticated users)
  - Spam protection with honeypot field
- 🎨 Integrate theme preferences with Firebase authentication
  - Themes now sync across devices for logged-in users
  - Fallback to localStorage for anonymous users
- 🖼️ Add favicon support with multiple sizes
- 📱 Add version number display (v0.9.0) in bottom-right corner
- 🔧 Update Firebase configuration for proper static file serving

--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     ],
     "rewrites": [
       {
-        "source": "**",
+        "source": "!/{data/**,refits.json}",
         "destination": "/index.html"
       }
     ]
