fix: Remove deploy.js from tracking and fix .gitignore
- Remove deploy.js containing FTP credentials from git tracking
- Fix malformed .gitignore entry (deploy.jssendgrid.env -> separate lines)
- SECURITY: FTP password in deploy.js was accidentally committed and needs to be changed

--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,5 @@ temp/
 firebase-debug.log
 
 # Deployment credentials - NEVER commit real FTP credentials!
-deploy.jssendgrid.env
+deploy.js
+sendgrid.env
