cleanup: Remove FTP deployment files and references
- Delete deploy.js and deploy.template.js (no longer needed)
- Remove 'deploy' script from package.json
- Update DEPLOY.md to focus on Firebase Hosting as primary option
- Clean up .gitignore references to removed files
- Firebase Hosting is now the recommended deployment method

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,5 @@ temp/
 .firebaserc
 firebase-debug.log
 
-# Deployment credentials - NEVER commit real FTP credentials!
-deploy.js
+# Sensitive files - NEVER commit credentials!
 sendgrid.env
