--- a/.gitignore
+++ b/.gitignore
@@ -44,10 +44,18 @@ temp/
 
 # Environment variables - NEVER commit API keys!
 .env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Security and credential files
+config.js
+secrets.json
+credentials.json
+**/config/secrets.*
+**/config/credentials.*
 
 # Firebase
 .firebase/
